@@ -38,11 +38,16 @@ public class MainDispatcher {
 		oggettoView.showResults(request);
 		oggettoView.showOptions();
 		oggettoView.submit();
-		try {
-			Runtime.getRuntime().exec("clear");
+		/*try {
+			new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+			//Runtime.getRuntime().exec("clear");
 		} catch (IOException e) {
 			e.printStackTrace();
-		}
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}*/
+		
+		
 
 	}
 }
